--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 </head>
 
 <body>
-  <pre class="glow" id="info">UwU IP grabber is grabbing your info...
-Your info will NOT been saved anywhere so dont panic.</pre>
+  <pre class="glow" id="info">UwU IP grabber is grabbing your info...</pre>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
   <script>
     const fetchInfo = () => {
@@ -79,8 +78,7 @@ Your info will NOT been saved anywhere so dont panic.</pre>
     fetchInfo().then(data => {
       document.getElementById('info').innerHTML = `UwU IP grabber has your info:
 ${objForm(data)}
-${objForm(getBrowserAndOSInfo())}
-Your info has NOT been saved anywhere so dont panic.`;
+${objForm(getBrowserAndOSInfo())}`;
     });
   </script>
 </body>
